--- a/templates/prices.html
+++ b/templates/prices.html
@@ -80,7 +80,7 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='js/matrix.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/matrix-fast.js') }}"></script>
     <script src="{{ url_for('static', filename='js/parallax.js') }}"></script>
     <script src="{{ url_for('static', filename='js/cards.js') }}"></script>
     <script src="{{ url_for('static', filename='js/animations.js') }}"></script>
