Добавлен маскот на все страницы сайта
- Добавлено изображение маскота в шапку всех страниц
- Стили для маскота добавлены в main.css
- Сохранена работоспособность матричного дождя
- Все страницы обновлены: index.html, about.html, projects.html, contact.html

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -387,3 +387,14 @@ h1.digital-title .title-line.neon-orange {
         transform: translateY(0);
     }
 }
+
+/* Стили для маскота */
+.mascot {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid #00ff88;
+    margin-right: 10px;
+    vertical-align: middle;
+}
