--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,8 @@
     <div class="digital-universe">
         <!-- Статичное меню -->
         <header class="digital-header">
+            <!-- ДОБАВЛЕН МАСКОТ -->
+            <img src="{{ url_for('static', filename='images/mascot/mascot-small.png') }}" alt="Маскот" class="mascot">
             <div class="logo" onclick="animateLogo()">
                 Петров Руслан
             </div>
