--- a/templates/projects.html
+++ b/templates/projects.html
@@ -14,6 +14,8 @@
     
     <div class="digital-universe">
         <header class="digital-header">
+            <!-- ДОБАВЛЕН МАСКОТ -->
+            <img src="{{ url_for('static', filename='images/mascot/mascot-small.png') }}" alt="Маскот" class="mascot">
             <div class="logo" onclick="animateLogo()">
                 Петров Руслан
             </div>
